# RustCRUD

./: Cargo.toml  dev.http
src/: author_db_managment.rs  crud.rs  hashing.rs  main.rs  middleware.rs  post_db_managment.rs  user_db_managment.rs  validations.rs
src/classes/: author.rs  post.rs
