[package]
name = "apiTesting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
regex = "1.9.5"
rusqlite = "0.29.0"
serde = "1.0"
serde_json = "1.0.106"
tokio = {version = "1.32.0", features=["full"]}
warp = "0.3.5"
