[package]
name = "apiTesting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.4"
bytes = "1.5.0"
chrono = "0.4"
futures = "0.3.28"
hmac = "0.12.1"
jsonwebtoken = "8.3.0"
jwt = "0.16.0"
mime_guess = "2.0.4"
rand = "0.8.5"
regex = "1.9.5"
rusqlite = "0.29.0"
serde = "1.0"
serde_json = "1.0.106"
sha2 = "0.10.8"
tokio = {version = "1.32.0", features=["full"]}
warp = "0.3.5"

[debug]
lto = true
panic = 'abort'
strip = true
opt-level = "z"
codegen-units = 1
